--- a/theater/src/Components/Seats/Seats.css
+++ b/theater/src/Components/Seats/Seats.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Limelight&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Limelight&family=Oswald:wght@200&display=swap');
+
 .seats { 
   padding-left: 200px;
   padding-right: 200px;
@@ -7,6 +10,36 @@
     position: sticky;
     top: 0;
     z-index: 100;
+}
+
+.seats .movie_info { 
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.seats .movie_info .movie_info_cont { 
+  display: flex;
+}
+
+.seats .movie_info .movie_info_cont .info { 
+  align-items: center;
+  align-self: center;
+}
+
+.seats .movie_info img { 
+  max-height: 200px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+
+.seats .movie_info .movie_info_cont .info h2 {
+  font-family: 'Lato', sans-serif;
+  font-size: 40px;
+}
+
+.seats .movie_info .movie_info_cont .info h3 { 
+  font-family: 'Oswald', sans-serif;
 }
 
 .screen { 
